# brain-storm

./: README
atributos_extraidos_com_imagem/: countPix.txt
atributos_extraidos_sem_imagem/: caracteristicas extraidas.txt
atributos_extraidos_sem_imagem/data 2000 neuronios/: dataSimpTrain.txt  dataSimpValid.txt
atributos_extraidos_sem_imagem/data 2500 neuronios/: dataSimpTrain.txt  dataSimpValid.txt
atributos_extraidos_sem_imagem/data 3000 neuronios/: dataSimpTrain.txt  dataSimpValid.txt
atributos_extraidos_sem_imagem/data 500 neuronios/: dataSimpTrain.txt  dataSimpValid.txt
brian - treinamento-classificador com imagem/: A.sh  B.sh  Makefile  brian  brian.cpp  brian.cpp.bkp  data.rar  storm.cpp
brian - treinamento-classificador sem imagem/: brian.cpp
contagotas - sgmenta manchas/: BlobExtractor.cpp  BlobExtractor.h  CMakeCache.txt  CMakeLists.txt  Makefile  MaskGenerator.cpp  MaskGenerator.h  RGBFilter.cpp  RGBFilter.h  cmake_install.cmake  contaGotas  contaGotas.cpp  contaGotasTerrestreUnion.rb  contaGotasTerrestreUnion.rb.bkp  contagotas.rar  countAll.txt  kjkk.txt  lala.txt
extract - extrai caracteristicas de textura/: CMakeCache.txt  CMakeLists.txt  Makefile  RGBFilter.cpp  RGBFilter.h  cmake_install.cmake  extract  extract.rb  gotas.rar  main.cpp
gotas_segmentadas/gotas - Todas/: log1.txt  log10.txt  log11.txt  log12.txt  log13.txt  log14.txt  log15.txt  log16.txt  log17.txt  log18.txt  log19.txt  log2.txt  log20.txt  log21.txt  log22.txt  log23.txt  log24.txt  log25.txt  log26.txt  log27.txt  log28.txt  log29.txt  log3.txt  log4.txt  log5.txt  (+4 more)
(+611 files in other folders)
